<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam</groupId>
    <artifactId>busExperiment</artifactId>
    <version>0.1</version>
  
    <properties>
             <!-- https://maven.apache.org/general.html#encoding-warning -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
             <!-- https://maven.apache.org/general.html#special-characters-site -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.java.version>15</project.java.version>
        <maven.compiler.source>${project.java.version}</maven.compiler.source>
        <maven.compiler.target>${project.java.version}</maven.compiler.target>
      <!-- see source for the plugins to verify if those can be skipped, they should IIRC -->
        <maven.compiler.encoding>${project.build.sourceEncoding}</maven.compiler.encoding>
        <maven.resources.encoding>${project.build.sourceEncoding}</maven.resources.encoding>
        <version.maven>3.5.3</version.maven>
      <!-- plugin versions should go here, so below they can be omitted -->
        <version.plugin.maven.enforcer>3.0.0-M2</version.plugin.maven.enforcer>
        <version.plugin.maven.jar>3.1.0</version.plugin.maven.jar>
        <version.plugin.maven.compiler>3.8.0</version.plugin.maven.compiler>
        <version.plugin.maven.resources>3.1.0</version.plugin.maven.resources>
        <rxjava.version>1.3.8</rxjava.version>
    </properties>

    <dependencies>
        <!-- #Your dependencies -->
        <dependency>
            <groupId>io.reactivex</groupId>
            <artifactId>rxjava</artifactId>
            <version>${rxjava.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${version.plugin.maven.enforcer}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                <!-- helps with plugin versions, so you are more up-to-date -->
                                    <version>${version.maven}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${version.plugin.maven.jar}</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>#FQN of your MainClass</mainClass>
                        </manifest>
                        <manifestEntries>
                            <mode>development</mode>
                            <url>${project.url}</url>
                            <key>value</key>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>                 
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.plugin.maven.compiler}</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
<!-- if diff enconding than UTF8 is needed: https://maven.apache.org/plugins/maven-resources-plugin/examples/encoding.html -->
                <version>${version.plugin.maven.resources}</version>
            </plugin>
        </plugins>
    </build>
</project>
